# CMake-Conan-Project

./: .gitignore  CMakeLists.txt  conanfile.txt
.github/actions/: debug.yml
.github/workflows/: debug.yml  lint.yml  release.yml
src/: main.cpp
